fixed wrapping issue for repProfile names

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@
 }
 
 .repProfileName {
+    white-space: normal;
     padding-bottom: 10px;
 }
 
